--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       .splide__slide {
         width: 100%;
         height: auto;
+        text-align: center;
       }
       .typography {
         display: inline-flex;
@@ -209,6 +210,12 @@
         } */
         .navbar_links {
           display: none;
+        }
+      }
+
+      @media screen and (max-width: 700px) {
+        .social_handles {
+          margin-top: 69px;
         }
       }
     </style>
